cmake_minimum_required(VERSION 3.14.0)
project(sorting VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(dutch-flag)
add_subdirectory(helpers)
add_subdirectory(partition)
add_subdirectory(merge-arrays)
add_subdirectory(nuts-and-bolts)
add_subdirectory(permutations)
add_subdirectory(single-value-tree)
